# dim_chat_android

./: build.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_lib.cpp
app/src/main/java/com/example/chat/: Dialogs.kt  MainActivity.kt  MyApplication.kt  RandomFragment.kt  Receivers.kt  SettingsFragment.kt  Util.kt  WebSocketListener.kt
app/src/main/java/com/example/chat/CallUtil/: CallFragment.kt  CustomPeerConnectionObserver.kt  CustomSdpObserver.kt
app/src/main/java/com/example/chat/ImageUtil/: FragmentImageView.kt  Image.kt  ImagePagerFragment.kt  ImagePagerMessFragment.kt
app/src/main/java/com/example/chat/MediaPlayer/: MediaPlayerHolder.kt  PlaybackInfoListener.kt  PlayerAdapter.kt
app/src/main/java/com/example/chat/MessagUtil/: Message.kt  MessagesAdapter.kt  MessagesFragment.kt
app/src/main/java/com/example/chat/SearchUtil/: SearchAdapter.kt  SearchCursorAdapter.kt  SearchFragment.kt
app/src/main/java/com/example/chat/UserUtil/: MyUser.kt  User.kt  UsersAdapter.kt  UsersFragment.kt
app/src/main/java/com/example/chat/data/: LoginDataSource.kt  LoginRepository.kt  Result.kt
app/src/main/java/com/example/chat/data/model/: LoggedInUser.kt
app/src/main/java/com/example/chat/ui/: BaseFragment.kt  BlurredLayout.java  CircleImageView.kt  MyConstraintLayout.kt
app/src/main/java/com/example/chat/ui/login/: LoggedInUserView.kt  LoginActivity.kt  LoginFormState.kt  LoginResult.kt  LoginViewModel.kt  LoginViewModelFactory.kt  RegistrActivity.kt
app/src/main/res/color/: bg_chip_state_list.xml
app/src/main/res/drawable/: bord_image.xml  c.xml  ic_check_mark.xml  ic_check_mark_2.xml  ic_check_mark_2_green.xml  ic_pause_circle_filled_black_24dp.xml  ic_play_circle_filled_black_24dp.xml  ic_record_red.xml  ic_videocam_red_24dp.xml  image.xml  my_message.xml  random.xml  spinner_ring.xml
app/src/main/res/layout/: activity_imageview_page.xml  activity_login.xml  activity_main.xml  activity_registr.xml  app_bar_main.xml  content_main.xml  fragment_call.xml  fragment_messages_list.xml  fragment_random.xml  fragment_search_list.xml  imageview.xml  item_list.xml  message.xml  message_image.xml  message_record.xml  nav_header_main.xml
app/src/main/res/menu/: menu_call.xml  menu_images.xml  menu_main.xml  menu_main_drawer.xml  menu_mess.xml  menu_mess_frag.xml  menu_setings.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/xml/: preferences.xml  preferences_cop.xml
gradle/wrapper/: gradle-wrapper.properties
